--- a/.github/workflows/backend-deploy.yml
+++ b/.github/workflows/backend-deploy.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   deploy:
     name: Deploy Backend
-    runs-on: windows-latest \
+    runs-on: windows-latest
 
     steps:
       - name: Checkout Repository
