--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,17 +1,16 @@
-# Use an official Python runtime as a parent image
-FROM python:3.12
+# Use a smaller base image
+FROM python:3.12-slim
 
-# Set the working directory inside the container
+# Set working directory
 WORKDIR /app
 
-# Copy the application files into the container
-COPY . .
-
-# Install dependencies
+# Install dependencies early to cache them
+COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Expose the FastAPI port
-EXPOSE 8000
+# Copy source code last (so we don’t break the cache often)
+COPY . .
 
-# Run FastAPI when the container starts
+# Expose port and run app
+EXPOSE 8000
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
