--- a/deployment/backend-deployment.yaml
+++ b/deployment/backend-deployment.yaml
@@ -17,6 +17,39 @@ spec:
           image: 440744253098.dkr.ecr.eu-north-1.amazonaws.com/usedcar-backend:latest
           ports:
             - containerPort: 8000
+          env:
+            - name: DB_HOST
+              valueFrom:
+                secretKeyRef:
+                  name: rds-secret
+                  key: host
+            - name: DB_USER
+              valueFrom:
+                secretKeyRef:
+                  name: rds-secret
+                  key: username
+            - name: DB_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: rds-secret
+                  key: password
+            - name: DB_NAME
+              valueFrom:
+                secretKeyRef:
+                  name: rds-secret
+                  key: database
+          livenessProbe: # ✅ Move inside the container section
+            httpGet:
+              path: /health
+              port: 8000
+            initialDelaySeconds: 10
+            periodSeconds: 5
+          readinessProbe: # ✅ Move inside the container section
+            httpGet:
+              path: /health
+              port: 8000
+            initialDelaySeconds: 5
+            periodSeconds: 5
 ---
 apiVersion: v1
 kind: Service
