--- a/deployment/backend-deployment.yaml
+++ b/deployment/backend-deployment.yaml
@@ -63,9 +63,10 @@ metadata:
   name: backend-service
   annotations:
     service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
-    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:us-east-1:YOUR_ACCOUNT_ID:certificate/YOUR_CERTIFICATE_ID
-    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
-    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "443"
+    service.beta.kubernetes.io/aws-load-balancer-type: "nlb" # Network Load Balancer for HTTPS
+    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:eu-north-1:YOUR_ACCOUNT_ID:certificate/YOUR_CERTIFICATE_ID
+    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: 443 # Use integer, not string
+    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http # FastAPI runs on HTTP
 spec:
   selector:
     app: usedcar-backend
@@ -75,7 +76,7 @@ spec:
       targetPort: 8000 # Backend app listens on port 8000
       name: https
     - protocol: TCP
-      port: 80
+      port: 80 # Expose HTTP externally (optional)
       targetPort: 8000
       name: http
   type: LoadBalancer
