--- a/deployment/backend-deployment.yaml
+++ b/deployment/backend-deployment.yaml
@@ -40,7 +40,7 @@ spec:
                   key: database
           livenessProbe:
             httpGet:
-              path: /health
+              path: /api/health
               port: 8000
             initialDelaySeconds: 30
             timeoutSeconds: 3
@@ -49,7 +49,7 @@ spec:
 
           readinessProbe:
             httpGet:
-              path: /health
+              path: /api/health
               port: 8000
             initialDelaySeconds: 20
             timeoutSeconds: 3
