--- a/deployment/backend-deployment.yaml
+++ b/deployment/backend-deployment.yaml
@@ -17,6 +17,13 @@ spec:
           image: 440744253098.dkr.ecr.eu-north-1.amazonaws.com/usedcar-backend:latest
           ports:
             - containerPort: 8000
+          resources:
+            requests:
+              cpu: "200m"
+              memory: "128Mi"
+            limits:
+              cpu: "500m"
+              memory: "256Mi"
           env:
             - name: DB_HOST
               valueFrom:
