--- a/deployment/backend-deployment.yaml
+++ b/deployment/backend-deployment.yaml
@@ -79,3 +79,23 @@ spec:
       targetPort: 8000
       name: http
   type: LoadBalancer
+
+---
+apiVersion: autoscaling/v2
+kind: HorizontalPodAutoscaler
+metadata:
+  name: usedcar-backend
+spec:
+  scaleTargetRef:
+    apiVersion: apps/v1
+    kind: Deployment
+    name: usedcar-backend
+  minReplicas: 1   # Minimum replicas to allow scaling down to 1
+  maxReplicas: 5   # Maximum replicas that can scale up to 5
+  metrics:
+  - type: Resource
+    resource:
+      name: cpu
+      target:
+        type: Utilization
+        averageUtilization: 50  # Target average CPU utilization (50%)
