Add terraform directory to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ backend/.env
 backend/__pycache__/main.cpython-312.pyc
 backend/devops-user_accessKeys.csv
 deployment/deployment-guide.md
+terraform
